2006-08-05  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/java/security/key/dss/DSSKey.java: Updated documentation.
	(hasInheritedParameters): New method.
	(equals): Updated documentation.
	Take into consideration the outcome of hasInheritedParameters invocation.
	(toString): Call hasInheritedParameters and adjust the result accordingly.
	* gnu/java/security/key/dss/DSSKeyPairX509Codec.java (encodePublicKey):
	Updated documentation.
	Handle case of public keys with null p, q, and g MPIs.
	(decodePublicKey): Handle case of absent or NULL p, q and g MPIs.

2006-08-05  Raif S. Naffah  <raif@swiftdsl.com.au>

	* configure.ac: Better handling of default-preferences-peer option.

2006-08-04  Andreas Tobler  <a.tobler@schweiz.ch>

	* java/awt/BasicStroke.java (dashedStroke): Cast coords.clone to
	double[].

2006-08-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/openmbean/TabularData.java:
	Documentation corrections.
	* javax/management/openmbean/TabularDataSupport.java:
	New file.

2006-08-04  Francis Kung  <fkung@redhat.com>

	* java/awt/BasicStroke.java
	(dashedStroke): Implemented.

2006-08-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/BadAttributeValueExpException.java,
	* javax/management/BadStringOperationException.java,
	* javax/management/InstanceAlreadyExistsException.java,
	* javax/management/InstanceNotFoundException.java,
	* javax/management/InvalidApplicationException.java,
	* javax/management/MBeanRegistrationException.java,
	* javax/management/MalformedObjectNameException.java,
	* javax/management/RuntimeErrorException.java,
	* javax/management/RuntimeMBeanException.java,
	* javax/management/ServiceNotFoundException.java:
	New files.
	
2006-08-04  Roman Kennke  <kennke@aicas.com>

	* javax/swing/SwingUtilities.java
	(layoutCompoundLabel(JComponent,FontMetrics,String,Icon,int,int,int,
	 int,Rectangle,Rectangle,Rectangle,int)): Delegate to new
	layoutCompoundLabelImpl().