@@ -1,3 +1,8 @@
+2006-08-05  Jeroen Frijters  <jeroen@frijters.net>
+
+	* java/awt/Component.java (setDropTarget): Commented out GTK specific
+	code.
+
 2006-08-05  Raif S. Naffah  <raif@swiftdsl.com.au>
 
 	* gnu/java/security/key/dss/DSSKey.java: Updated documentation.
